--- a/package.json
+++ b/package.json
@@ -13,29 +13,20 @@
     "@types/jest": "^24.0.25",
     "@types/jsonp": "^0.2.0",
     "@types/node": "^12.12.24",
-    "@types/query-string": "^6.3.0",
     "@types/react": "^16.9.17",
     "@types/react-dom": "^16.9.4",
     "@types/react-router": "^5.1.4",
     "@types/react-router-dom": "^5.1.3",
     "axios": "^0.19.2",
-    "axios-jsonp": "^1.0.4",
-    "axios-jsonp-pro": "^1.1.8",
     "firebase": "^7.17.1",
     "google-maps-react": "^2.0.6",
     "ionicons": "^5.0.0",
-    "jsonp": "^0.2.1",
-    "query-string": "^6.13.1",
     "react": "^16.13.0",
-    "react-bingmaps": "^3.6.1",
     "react-dom": "^16.13.0",
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.4.1",
     "typescript": "3.8.3",
-    "uid": "^1.0.0",
-    "use-url-search-params": "^2.3.13",
-    "uuid": "^8.2.0"
+    "uid": "^1.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -59,7 +50,8 @@
     ]
   },
   "devDependencies": {
-    "@capacitor/cli": "2.3.0"
+    "@capacitor/cli": "2.3.0",
+    "react-scripts": "3.4.1"
   },
-  "description": "An Ionic project"
+  "description": "An Ionic project:Store Finder"
 }
